--- a/StarWarsWiki/package.json
+++ b/StarWarsWiki/package.json
@@ -6,17 +6,32 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "lint": "eslint ."
   },
   "dependencies": {
+    "@expo-google-fonts/source-sans-pro": "^0.2.3",
     "expo": "~50.0.11",
+    "expo-font": "~11.10.3",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
     "react-native": "0.73.4",
-    "styled-components": "^6.1.8"
+    "styled-components": "^6.1.8",
+    "expo-splash-screen": "~0.26.4"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@babel/plugin-syntax-decorators": "^7.24.0",
+    "@react-native-community/eslint-config": "^3.2.0",
+    "babel-plugin-root-import": "^5.1.0",
+    "eslint": "^8.57.0",
+    "eslint-config-universe": "^12.0.0",
+    "eslint-import-resolver-babel-plugin-root-import": "^1.1.1",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-jsx-a11y": "^6.8.0",
+    "eslint-plugin-react": "^7.34.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "prettier": "^3.2.5"
   },
   "private": true
 }
